# BlogTown

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
blogtown/: __init__.py  models.py  server.py  storage.py
config/: atlas-chat.example.env  authors.example.yaml  collect_allowlist.example.txt  schedules.example.yaml
docs/: ARCHITECTURE.md
docs/contract/: content-item.schema.json
docs/superpowers/plans/: 2026-05-28-m1-scraper.md  2026-06-02-hermes-webui.md  2026-06-03-content-contract.md  2026-06-03-display-site.md  2026-06-05-notes.md  (+25 more)
scripts/: run.sh  test_hermes.py
src/aishelf/: __init__.py  alias.py  embed.py
tests/: test_storage.py
tests/integration/: test_webui_network.py
tests/unit/: test_alias.py  test_collide.py  test_contract_loader.py  test_contract_models.py  test_contract_schema.py  test_db_cli.py  test_db_cluster.py  test_db_config.py  test_db_graph.py  test_db_schema.py  test_db_search.py  test_db_sync.py  test_db_tokenize.py  test_db_vector.py  test_digest.py  test_embed.py  test_genesis.py  test_site_allowlist.py  test_site_app.py  test_site_ask.py  test_site_ask_routes.py  test_site_collect.py  test_site_collect_routes.py  test_site_collide_routes.py  test_site_critique.py  test_site_delete_routes.py  test_site_graph_routes.py  test_site_hermes.py  test_site_islands.py  test_site_islands_route.py  test_site_item_route.py  test_site_items.py  test_site_keywords.py  test_site_learn.py  test_site_llm.py  test_site_markdown.py  test_site_mirror.py  test_site_note_draft.py  test_site_notes.py  test_site_notes_routes.py  (+12 more)
(+118 files in other folders)
