[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aishelf"
version = "0.0.1"
description = "AI video content aggregator — Scraper (M1)"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2024.0.0",
  "youtube-transcript-api>=0.6.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.0",
  "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aishelf"]
